nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb-service
spec:
  selector:
    app: nginx-lb
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
  type: LoadBalancer
